--- a/src/Components/Create/Create.module.scss
+++ b/src/Components/Create/Create.module.scss
@@ -9,7 +9,7 @@
   font-family: $link-font;
 
   & section {
-    @include dimensions(clamp(400px, 70%, 1200px), 100%);
+    @include dimensions(clamp(500px, 85%, 1030px), 100%);
     margin: auto;
     padding: 2rem;
 
@@ -20,10 +20,10 @@
     text-align: center;
     color: $font-color-1;
 
-    h2{
+    h2 {
       font-size: 1.7rem;
     }
-    
+
     h3 {
       margin: 1rem 0;
       padding-bottom: 1rem;
@@ -56,6 +56,11 @@
         border-radius: 25px;
         cursor: pointer;
         transition: $transition;
+
+        &[disabled] {
+          pointer-events: none;
+          background-color: $bg-color-4;
+        }
       }
 
       select:hover,
@@ -98,6 +103,20 @@
         pointer-events: none;
         filter: invert(100%);
       }
+
+    }
+
+    & span {
+      display: inline-block;
+      margin-top: 5px;
+      height: 17px;
+      
+      color: rgb(220, 60, 60);
+      font-size: 14px;
+      line-height: 17px;
+      text-overflow: ellipsis;
+      text-align: center;
+
     }
 
     label {
@@ -126,7 +145,9 @@
     input::placeholder {
       color: $placeholder-color;
     }
-    select,input,button {
+    select,
+    input,
+    button {
       transition: $transition;
     }
   }
