--- a/src/Components/Edit/Edit.module.scss
+++ b/src/Components/Edit/Edit.module.scss
@@ -8,7 +8,7 @@
   color: $font-color-3;
 
   & section {
-    @include dimensions(clamp(400px, 70%, 1200px), 100%);
+    @include dimensions(clamp(500px, 85%, 1030px), 100%);
     margin: auto;
     padding: 2rem;
 
@@ -54,6 +54,18 @@
           align-items: center;
           align-content: center;
 
+          & span {
+            display: inline-block;
+            margin-top: 5px;
+            height: 17px;
+            
+            color: rgb(220, 60, 60);
+            font-size: 14px;
+            line-height: 17px;
+            text-overflow: ellipsis;
+            text-align: center;
+          }
+      
           & > div {
             @include dimensions(100%, 40%);
             position: relative;
@@ -138,16 +150,20 @@
           cursor: pointer;
           transition: $transition;
 
-          &:active {
-            cursor:progress;
+          &[disabled] {
+            pointer-events: none;
+            background-color: $bg-color-4;
+          }
+          
+          &:nth-child(1):hover{
+            background-color: rgb(159, 17, 17);
+          }
+          &:nth-child(2):hover{
+            background-color: rgb(24, 94, 24);
           }
         }
-        & button:nth-child(1):hover{
-          background-color: rgb(159, 17, 17);
-        }
-        & button:nth-child(2):hover{
-          background-color: rgb(24, 94, 24);
-        }
+
+
       }
           select:hover,
           select:focus,
