--- a/src/Components/Misc/CarList/CarList.module.scss
+++ b/src/Components/Misc/CarList/CarList.module.scss
@@ -10,18 +10,18 @@
   justify-content: center;
   column-gap: 1rem;
   row-gap: 1rem;
-
+  
   & a {
     @include dimensions(clamp(10rem, 18%, 15rem), max-content);
     display: inline-block;
     padding-bottom: 1rem;
-
+    
     color: $font-color-2;
     background-color: $bg-color-4;
-
+    
     box-shadow: $shadow-2;
     border-radius: 25px;
-
+    
     overflow: hidden;
     transition: $transition;
 
@@ -32,11 +32,12 @@
 }
 
 .card {
+  position:relative;
   display: flex;
   flex-direction: column;
-
+  
   & h6,
-  & p {
+  & p:not(:nth-child(1)) {
     padding: 0.5rem 0 0.5rem 1rem;
   }
 
@@ -121,6 +122,19 @@
   right: 0;
 
   border-radius: 25% 0 0 25%;
+}
+
+.date {
+  position:absolute;
+  left:3%;
+  top:2%;
+  padding:3px;
+
+  color:$font-color-2;
+  border-radius: 15px;
+  font-size: 0.9rem;
+  font-weight: 600;
+  z-index:3;
 }
 
 .empty {
