--- a/src/Components/Misc/CarList/CarList.module.scss
+++ b/src/Components/Misc/CarList/CarList.module.scss
@@ -37,15 +37,21 @@
   flex-direction: column;
   
   & h6,
-  & p:not(:nth-child(1)) {
+  & p {
     padding: 0.5rem 0 0.5rem 1rem;
+
+    &:nth-last-child(1){
+      text-decoration: underline;
+      text-underline-offset: 5px;
+    }
   }
+
+
 
   & h6 {
     @include dimensions(90%, auto);
 
     font-weight: 600;
-
     text-decoration: underline;
     text-decoration-color: $font-color-1;
     text-underline-offset: 5px;
@@ -70,12 +76,13 @@
     white-space: nowrap;
 
     & span {
-      display: inline-block;
       @include dimensions(100%, 100%);
+      display: inline-block;
       overflow: hidden;
 
       & img {
         all: unset;
+
         @include dimensions(100%, 100%);
         object-position: center center;
         object-fit: cover;
@@ -122,19 +129,6 @@
   right: 0;
 
   border-radius: 25% 0 0 25%;
-}
-
-.date {
-  position:absolute;
-  left:3%;
-  top:2%;
-  padding:3px;
-
-  color:$font-color-2;
-  border-radius: 15px;
-  font-size: 0.9rem;
-  font-weight: 600;
-  z-index:3;
 }
 
 .empty {
