--- a/src/main-styles/variables.scss
+++ b/src/main-styles/variables.scss
@@ -10,6 +10,7 @@ $backdrop-color-2:rgba(0, 0, 0, 0.5);
 
 $nav-bg-color: #272343;
 $nav-bg-color-light: #7277d6e3;
+$side-bar-color: #4045ac;
 
 $gradient-blue:linear-gradient(135deg,#272343, #7277d6 100%);
 
