--- a/src/Components/Forms/AdvancedSearch.module.scss
+++ b/src/Components/Forms/AdvancedSearch.module.scss
@@ -2,7 +2,7 @@
 @import "../../main-styles/variables.scss";
 
 .form-wrapper {
-  @include dimensions(clamp(350px, 60%, 1000px),clamp(80vh,85vh,1000px));
+  @include dimensions(clamp(350px, 60%, 1000px),clamp(500px,85vh,600px));
   margin: 3vh auto;
   padding: 2rem 0;
   position: relative;
@@ -139,7 +139,7 @@
       input {
         @include dimensions(100%, 100%);
         position: relative;
-        padding: 1rem 0 1rem 2rem;
+        padding: 1rem;
 
         appearance: none;
         border: none;
@@ -155,6 +155,9 @@
         &::placeholder {
           color: $placeholder-color;
         }
+      }
+      input{
+        padding:1rem 0 1rem 2rem;
       }
     }
   }
