--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -11,7 +11,7 @@
   box-shadow: $shadow;
 
   & nav {
-    @include dimensions(60%, 100%);
+    @include dimensions(70%, 100%);
   }
 
   & ul {
@@ -19,11 +19,20 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: start;
     align-items: center;
+    column-gap:5vw;
+
+    padding-left:3rem;
 
     & li {
+      display:inline-block;
       position: relative;
+
+      & img {
+        @include dimensions(2rem,2rem);
+        filter:invert(100%);
+      }
     }
 
     & li:not(li:first-child) {
