sidemenu restyle and ownerOnly route guard

--- a/src/Components/Auth/Auth.module.scss
+++ b/src/Components/Auth/Auth.module.scss
@@ -140,7 +140,8 @@
 
       & img {
         @include dimensions(20px, 15px);
-
+        
+        pointer-events: none;
         filter: invert(100%);
       }
 
