--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -19,16 +19,13 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     column-gap:5vw;
 
     padding-left:3rem;
 
     & li {
-      display:inline-block;
-      position: relative;
-
       & img {
         @include dimensions(2rem,2rem);
         filter:invert(100%);
