--- a/src/Components/Menu/Menu.module.scss
+++ b/src/Components/Menu/Menu.module.scss
@@ -42,16 +42,32 @@
         background: $nav-bg-color-light;
         box-shadow: $shadow-2;
 
+        & img {
+          opacity: 1;
+        }
+
       }
     }
 
     a {
       @include dimensions(100%, 100%);
-      display: inline-block;
+      display:flex;
+      align-items: center;
+      justify-content: start;
+      column-gap: 1rem;
 
       color: $font-color-3;
       font-family: $text-font;
       transition: $transition;
+
+      & img {
+        @include dimensions(1.3rem,1.3rem);
+        pointer-events: none;
+
+        opacity:0;
+        filter:invert(100%);
+        transition: $transition;
+      }
     }
   }
 }
