--- a/src/Components/Misc/Controls/Controls.module.scss
+++ b/src/Components/Misc/Controls/Controls.module.scss
@@ -8,9 +8,12 @@
   flex-direction: row;
   justify-content: space-between;
 
+
   & > form {
+    @include dimensions(15rem,auto);
     display:flex;
     direction: row;
+    justify-content: center;
     align-items: center;
     column-gap:0.5rem;
 
