--- a/src/Components/Details/CarDetails.module.scss
+++ b/src/Components/Details/CarDetails.module.scss
@@ -7,7 +7,7 @@
 }
 
 .details-container {
-  @include dimensions(100%,max-content);
+  @include dimensions(100%, max-content);
   padding: 1rem;
   display: grid;
   grid-template-columns: 70% 0.15fr 1.7fr;
@@ -23,29 +23,28 @@
     "description description contacts"
     "description description contacts";
 
-  font-family: $text-font;
-
   background-color: $bg-color-1;
   box-shadow: $shadow-2;
+
+  font-family: $text-font;
 
   & > div:nth-child(4) {
     grid-area: contacts;
   }
-
 }
 
 .contacts,
 .description,
 .technicals {
-  padding: 1rem ;
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+  padding: 1rem;
+
+  background-color: $bg-color-4;
+  border-radius: 10px;
 
   color: $font-color-2;
-  background-color: $bg-color-4;
-
-  border-radius: 10px;
 
   img {
     @include dimensions(20px, 20px);
@@ -67,9 +66,8 @@
   }
 
   span {
-    word-break:break-all;
+    word-break: break-all;
   }
-
 }
 
 .description {
@@ -91,9 +89,10 @@
   p {
     padding: 0.5rem;
 
-    font-size: 1.2rem;
-    color: $font-color-3;
     background-color: $nav-bg-color-light;
+
+    color: $font-color-3;
+    font-size: 1.2rem;
   }
 
   h5 {
@@ -128,34 +127,38 @@
   position: fixed;
   inset: 0;
 
-  z-index:3;
+  z-index: 3;
   background-color: $backdrop-color-2;
 }
 
 .button-container {
   position: absolute;
-  top:1.5rem;
-  left:1.5rem;
-  z-index:2;
+  top: 1.5rem;
+  left: 1.5rem;
 
- button {
-    display:flex;
+  z-index: 2;
+
+  button {
+    display: flex;
     flex-direction: row;
+    padding: 1rem;
+
     border-radius: 50%;
     border: none;
-    outline:2px solid rgba(255, 255, 255, 0);
+    outline: 2px solid rgba(255, 255, 255, 0);
     outline-offset: -5px;
-    background-color:$nav-bg-color-light;
+    background-color: $nav-bg-color-light;
+
     cursor: pointer;
-    padding:1rem;
     transition: $transition;
 
     & img {
-      @include dimensions(1rem,1rem);
-      filter:invert(100%);
+      @include dimensions(1rem, 1rem);
+      filter: invert(100%);
     }
 
-    &:hover,&:focus {
+    &:hover,
+    &:focus {
       outline: 2px solid $bg-color-1;
     }
   }
