--- a/src/main-styles/variables.scss
+++ b/src/main-styles/variables.scss
@@ -18,6 +18,7 @@ $font-color-1: #808080;
 $font-color-2: #0e0e0e;
 $font-color-3: #ffffff;
 $placeholder-color:#bebebe;
+$error-color:rgb(201, 26, 26);
 
 $link-font: "Raleway", sans-serif;
 $text-font: "Nunito", sans-serif;
