--- a/src/Components/Auth/Auth.module.scss
+++ b/src/Components/Auth/Auth.module.scss
@@ -3,8 +3,8 @@
 
 .main {
   @include dimensions(100%, max-content);
+  display: flex;
   padding: 2rem 0;
-  display:flex;
 
   font-family: $text-font;
 
@@ -16,26 +16,26 @@
     margin: auto;
     padding: 1.5rem 1rem;
 
-    text-align: center;
-    color: $font-color-1;
-
     background-color: $bg-color-4;
     border-radius: 25px;
     box-shadow: $shadow-2;
+    
+    text-align: center;
+    color: $font-color-1;
 
     h1 {
       margin: 1rem 0;
       padding-bottom: 1rem;
 
+      border-bottom: 2px solid $bg-color-4;
+
       font-size: 1.7rem;
       font-weight: 600;
 
-      border-bottom: 2px solid $bg-color-4;
     }
 
     p {
       margin: 1rem 0;
-
       font-size: 1.1rem;
     }
 
@@ -64,24 +64,24 @@
       margin-top: 0.5rem;
       padding: 0.7rem;
 
-      text-align: center;
-      color: $font-color-3;
-
+      
       background-color: $nav-bg-color-light;
       border: none;
       border-radius: 25px;
-
       outline: none;
       outline: 2px solid transparent;
       outline-offset: 3px;
+
+      color: $font-color-3;
+      text-align: center;
 
       transition: $transition;
     }
 
     & input[type="checkbox"] {
       @include dimensions(15px, 15px);
-      cursor: pointer;
 
+      cursor: pointer;
       accent-color: $nav-bg-color-light;
     }
 
@@ -95,34 +95,29 @@
 
       & span {
         display: inline-block;
+        height: 1rem;
         margin-top: 5px;
-        height: 17px;
-        
-        position:absolute;
-        bottom:-1.3rem;
-        left:50%;
+        position: absolute;
+        bottom: -1.3rem;
+        left: 50%;
         transform: translateX(-50%);
-        
-        color: rgb(220, 60, 60);
+
+
+        color: $error-color;
         font-size: 14px;
         line-height: 17px;
         text-overflow: ellipsis;
         text-align: center;
+
         white-space: nowrap;
-  
         overflow: hidden;
       }
     }
-
 
     & button {
       width: 100px;
       margin: 0 0.5rem;
       padding: 0.5rem;
-
-      color: $font-color-3;
-      font-family: $text-font;
-      font-size: 1rem;
 
       background-color: $nav-bg-color-light;
       border: none;
@@ -130,6 +125,10 @@
       outline: none;
       outline: 2px solid transparent;
       outline-offset: 3px;
+      
+      color: $font-color-3;
+      font-family: $text-font;
+      font-size: 1rem;
 
       transition: $transition;
       cursor: pointer;
@@ -141,7 +140,7 @@
 
       & img {
         @include dimensions(20px, 15px);
-        
+
         pointer-events: none;
         filter: invert(100%);
       }
