--- a/src/Components/Create/Create.module.scss
+++ b/src/Components/Create/Create.module.scss
@@ -17,8 +17,8 @@
     border-radius: 25px;
     box-shadow: $shadow-2;
 
-    text-align: center;
     color: $font-color-1;
+    text-align: center;
 
     h2 {
       font-size: 1.7rem;
@@ -42,7 +42,6 @@
 
       & > button {
         all: unset;
-
         width: 100px;
         margin: 2rem 0.5rem;
         padding: 0.5rem;
@@ -58,8 +57,8 @@
         transition: $transition;
 
         &[disabled] {
-          pointer-events: none;
           background-color: $bg-color-4;
+          pointer-events: none;
         }
       }
 
@@ -91,6 +90,7 @@
     & > div {
       @include dimensions(100%, 40%);
       position: relative;
+
       overflow: hidden;
 
       & img {
@@ -111,7 +111,7 @@
       margin-top: 5px;
       height: 17px;
       
-      color: rgb(220, 60, 60);
+      color: $error-color;
       font-size: 14px;
       line-height: 17px;
       text-overflow: ellipsis;
@@ -131,15 +131,17 @@
       position: relative;
       appearance: none;
       padding-left: 1rem;
+
+      background: $nav-bg-color-light;
       border: none;
       outline: none;
-      overflow: auto;
-      cursor: pointer;
 
       color: $font-color-3;
-      background: $nav-bg-color-light;
       font-family: $text-font;
       font-size: 1rem;
+
+      overflow: auto;
+      cursor: pointer;
     }
 
     input::placeholder {
@@ -155,19 +157,21 @@
   & > div:nth-last-child(2) {
     @include dimensions(100%, 80%);
     text-align: center;
+
     & textarea {
       @include dimensions(80%, 100%);
-      max-width: 100%;
-      min-width: 50%;
       min-height: 100px;
+      margin: auto;
+      padding: 0.5rem;
+
       border: none;
       outline: none;
-      padding: 0.5rem;
-      margin: auto;
-      font-family: $text-font;
-      resize: vertical;
+
       color: $font-color-2;
+      font-family: $text-font;
       font-weight: 600;
+
+      resize: vertical;
     }
   }
 }
