--- a/src/Components/Details/CarDetails.module.scss
+++ b/src/Components/Details/CarDetails.module.scss
@@ -68,6 +68,13 @@
   span {
     word-break: break-all;
   }
+
+  a {
+    color:inherit;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-color: $bg-color-4;
+  }
 }
 
 .description {
