--- a/src/Components/Profile/Profile.module.scss
+++ b/src/Components/Profile/Profile.module.scss
@@ -16,6 +16,18 @@
     border-bottom: 2px solid $bg-color-4;
   }
 
+  h2 {
+    margin:2rem auto;
+
+    color:$font-color-1;
+    font-family: $text-font;
+    font-size: 1.5rem;
+    font-weight:600;
+    text-align: center;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+  }
+
   & > div {
     text-align: center;
 
