--- a/src/Components/Profile/Profile.module.scss
+++ b/src/Components/Profile/Profile.module.scss
@@ -17,15 +17,13 @@
   }
 
   h2 {
-    margin:2rem auto;
+    margin: 2rem auto;
 
-    color:$font-color-1;
+    color: $font-color-1;
     font-family: $text-font;
     font-size: 1.5rem;
-    font-weight:600;
+    font-weight: 600;
     text-align: center;
-    text-decoration: underline;
-    text-underline-offset: 5px;
   }
 
   & > div {
@@ -70,26 +68,8 @@
   background-color: $bg-color-4;
   border-radius: 25px;
   box-shadow: $shadow-2;
-  
+
   text-align: center;
-
-  & > div:nth-child(1) {
-    @include dimensions(9rem, 9rem);
-    margin: auto;
-
-    border-radius: 50%;
-    outline: 9px solid $nav-bg-color-light;
-    outline-offset: -9px;
-    box-shadow: $shadow-2;
-    overflow: hidden;
-
-    & img {
-      @include dimensions(9rem, 9rem);
-
-      pointer-events: none;
-      object-fit: cover;
-    }
-  }
 
   & > div:nth-child(2) {
     margin: 1rem auto;
@@ -106,4 +86,63 @@
       text-transform: capitalize;
     }
   }
+}
+
+.photo-container {
+  @include dimensions(9rem, 9rem);
+  margin: auto;
+  position: relative;
+
+  & > div:nth-of-type(1) {
+    @include dimensions(100%,100%);
+
+    border-radius: 50%;
+    outline: 9px solid $nav-bg-color-light;
+    outline-offset: -9px;
+    box-shadow: $shadow-2;
+
+    overflow: hidden;
+
+    & img {
+      @include dimensions(9rem, 9rem);
+
+      pointer-events: none;
+    }
+  }
+
+  & > div:nth-of-type(2){
+    width: 100%;
+    position: absolute;
+    bottom:0.5rem;
+    left:50%;
+    transform: translate(-50%,50%);
+    border-radius: 25px;
+
+    transition: $transition;
+    overflow:hidden;
+    opacity: 0;
+
+    
+    & label {
+      display: inline-block;
+      padding-block:0.5rem;
+      width:100%;
+      
+      color:$font-color-3;
+      background-color: $side-bar-color;
+      cursor:pointer;
+    }
+  }
+
+  &:hover > div:nth-of-type(2){
+    opacity: 1;
+  }
+}
+
+.contain {
+  object-fit: contain;
+}
+
+.cover {
+  object-fit: cover;
 }
