--- a/src/Components/Edit/Edit.module.scss
+++ b/src/Components/Edit/Edit.module.scss
@@ -59,7 +59,7 @@
             margin-top: 5px;
             height: 17px;
             
-            color: rgb(220, 60, 60);
+            color: $error-color;
             font-size: 14px;
             line-height: 17px;
             text-overflow: ellipsis;
@@ -156,7 +156,7 @@
           }
           
           &:nth-child(1):hover{
-            background-color: rgb(159, 17, 17);
+            background-color: $error-color;
           }
           &:nth-child(2):hover{
             background-color: rgb(24, 94, 24);
