--- a/src/Components/Menu/Menu.module.scss
+++ b/src/Components/Menu/Menu.module.scss
@@ -52,7 +52,7 @@
       @include dimensions(100%, 100%);
       display:flex;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
       column-gap: 1rem;
 
       color: $font-color-3;
