--- a/src/main-styles/variables.scss
+++ b/src/main-styles/variables.scss
@@ -12,13 +12,12 @@ $nav-bg-color: #272343;
 $nav-bg-color-light: #7277d6e3;
 $side-bar-color: #4045ac;
 
-$gradient-blue:linear-gradient(135deg,#272343, #7277d6 100%);
-
 $font-color-1: #808080;
 $font-color-2: #0e0e0e;
 $font-color-3: #ffffff;
 $placeholder-color:#bebebe;
 $error-color:rgb(201, 26, 26);
+$success-color:rgb(42, 149, 42);
 
 $link-font: "Raleway", sans-serif;
 $text-font: "Nunito", sans-serif;
