--- a/src/Components/Edit/Edit.module.scss
+++ b/src/Components/Edit/Edit.module.scss
@@ -159,7 +159,7 @@
             background-color: $error-color;
           }
           &:nth-child(2):hover{
-            background-color: rgb(24, 94, 24);
+            background-color:$success-color;
           }
         }
 
