--- a/src/Components/Profile/Profile.module.scss
+++ b/src/Components/Profile/Profile.module.scss
@@ -135,6 +135,7 @@
     & button {
       @include dimensions(1.5rem, 1.5rem);
       position: absolute;
+      top: -1.5rem;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -157,13 +158,12 @@
       }
 
       &:nth-of-type(1) {
-        top: -1.5rem;
         left: 0;
 
-        background-color: rgb(24, 94, 24);
+        background-color: $success-color;
       }
+
       &:nth-of-type(2) {
-        top: -1.5rem;
         right: 0;
 
         background-color: $error-color;
