--- a/src/Components/Details/CarDetails.module.scss
+++ b/src/Components/Details/CarDetails.module.scss
@@ -70,7 +70,7 @@
   }
 
   a {
-    color:inherit;
+    color: inherit;
     text-decoration: underline;
     text-underline-offset: 5px;
     text-decoration-color: $bg-color-4;
@@ -115,6 +115,10 @@
   td {
     padding: 0.5rem 0;
     text-align: start;
+  }
+
+  td::first-letter {
+    text-transform: capitalize;
   }
 
   th {
