--- a/src/Components/Menu/Menu.module.scss
+++ b/src/Components/Menu/Menu.module.scss
@@ -30,12 +30,10 @@
 
 
     & li {
-      padding: 0.5rem;
-
       border-radius: 30px;
       transition: $transition;
 
-      &:hover {
+      &:hover a {
         padding-left: 1rem;
 
         background: $nav-bg-color-light;
@@ -49,12 +47,15 @@
     }
 
     a {
-      @include dimensions(100%, 100%);
+      @include dimensions(80%, auto);
       display:flex;
       align-items: center;
       justify-content: flex-start;
       column-gap: 1rem;
+      padding: 0.5rem;
 
+      border-radius: 30px;
+      
       color: $font-color-3;
       font-family: $text-font;
 
