--- a/src/Components/ErrorHandlers/404.module.scss
+++ b/src/Components/ErrorHandlers/404.module.scss
@@ -9,11 +9,10 @@
 }
 
 .message-box {
-  @include dimensions(60%, max-content);
-  min-width: 300px;
+  @include dimensions(clamp(250px,50vw,600px), max-content);
   position: relative;
   margin: 0 auto;
-  padding: 3rem 0.5rem;
+  padding: 2.5rem 0.5rem;
 
   background: $side-bar-color;
   box-shadow: $shadow-2;
@@ -58,5 +57,15 @@
 
     pointer-events: none;
     filter: hue-rotate(25deg);
+  }
+}
+
+.fb-image-box {
+  margin: 5% auto;
+
+  & img {
+    max-width:90vw;
+    pointer-events: none;
+    filter: hue-rotate(45deg);
   }
 }
