--- a/src/main-styles/App.scss
+++ b/src/main-styles/App.scss
@@ -13,6 +13,9 @@ body {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   position: relative;
   height: max-content;
   min-height: 80vh;
