--- a/src/Components/Create/Create.module.scss
+++ b/src/Components/Create/Create.module.scss
@@ -3,14 +3,14 @@
 
 .main {
   @include dimensions(100%, max-content);
-  padding: 2rem 0;
+  align-content: flex-start !important;
 
   color: $font-color-3;
   font-family: $link-font;
 
   & section {
     @include dimensions(clamp(500px, 85%, 1030px), 100%);
-    margin: auto;
+    margin:3rem auto;
     padding: 2rem;
 
     background-color: $bg-color-4;
